# basics-cpp

./: CMakeLists.txt
src/: main.cpp
